--- a/partials/behandlingar.html
+++ b/partials/behandlingar.html
@@ -3,8 +3,8 @@
 		<div class="col-md-6">
 		</div>
 		<div class="col-md-6 opaque">
-			<h2>Tandvård och bra behandlingsmetoder</h2>
-			<p>Lorem ipsum-text</p>
+			<h2>Vi utför all form av tandvård i Göteborg</h2>
+			<p>Vi på Beiring Tandklinik utför all form av tandvård. Våra två kliniker hittar du i Olskroken, Redbergsvägen 13 A ovanpå ”le Pain Francais” och vid Kopparmärra, Östra Hamngatan 52 ovanpå Akademibokhandeln.</p>
 		</div>
 	</div>
 </section>
@@ -16,11 +16,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Allmän tandvård
+						<a href="behandlingar/allman-tandvard">Allmän tandvård</a>
 					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Efter den första undersökningen utarbetar vi en personlig plan för just dina behov. Läs mer om <a href="behandlingar/allman-tandvard">allmän tandvård.</a>
 					</p>
 				</div>
 			</div>			
@@ -28,11 +28,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Förebyggande tandvård
+						<a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Förebyggande tandvård</a>
 					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Regelbundna undersökningar och besök hos våra tandhygienister är en bra investering i det långa loppet. <a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Läs mer om förebyggande tandvård.</a>
 					</p>
 				</div>
 			</div>			
@@ -40,11 +40,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Tandblekning
+						<a href="behandlingar/tandblekning">Tandblekning</a>
 					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Vi börjar med en undersökning, för att sedan rekommendera den metod som passar just dina tänder.<a href="behandlingar/tandblekning"> Läs mer om tandblekning.</a>
 					</p>
 				</div>
 			</div>			
@@ -54,10 +54,10 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="tile">
-					<a href="#behandlingar/bettskena"><h3>Bettskena</h3></a>
+					<a href="behandlingar/bettskena"><h3>Bettskena</h3></a>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna. <a href="behandlingar/bettskena">Läs mer om Bettskena.</a>
 					</p>
 				</div>
 			</div>			
@@ -65,11 +65,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Visdomstandskirurgi
+						<a href="behandlingar/visdomtandskirurgi">Visdomstandskirurgi</a>
 					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Ibland måste visdomständerna opereras bort. Vi ser till att det blir så smidigt och smärtfritt som möjligt. <a href="behandlingar/visdomtandskirurgi">Läs mer om visdomstandskirurgi</a>
 					</p>
 				</div>
 			</div>			
@@ -77,14 +77,50 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Allmän tandvård
+						<a href="behandlingar/tandimplantat">Tandimplantat</a>
 					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende. <a href="behandlingar/tandimplantat">Mer om tandimplantat, läs mer.</a>
 					</p>
 				</div>
 			</div>			
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tile">
+					<a href="behandlingar/tandreglering"><h3>Tandreglering</h3></a>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Hos oss kan du få hjälp med allt från enkla justeringar till omfattande felställningar. <a href="behandlingar/tandreglering"> Läs mer om tandreglering.</a>
+					</p>
+				</div>
+			</div>			
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						<a href="behandlingar/estetisk-tandvard">Estetisk Tandvård</a>
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Genom att kombinera de bästa materialen med den senaste tekniken, skapar vi det leende du alltid drömt om. <a href="behandlingar/estetisk-tandvard">Läs mer om estetisk tandvård.</a>
+					</p>
+				</div>
+			</div>	
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						<a href="behandlingar/tandvardsradsla">Tandvårdsrädsla</a>
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Nästan alla känner viss rädsla för att gå till tandläkaren. Var tionde svensk låter bli helt att gå pga tandvårdsrädsla.  <a href="behandlingar/tandvardsradsla">Läs mer om tandvårdsrädsla.</a>
+					</p>
+				</div>
+			</div>	
+
 		</div>
 
 	</div>
