--- a/partials/bettskena.html
+++ b/partials/bettskena.html
@@ -3,7 +3,14 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Bettskena</h2>
-				<p>En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor En text om bettskenor </p>
+				<p>Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna.</p>
+
+<p>I perioder av stress kan spänningar i nackens och axlarnas muskulatur sprida sig upp mot huvud- och käkmuskulaturen, vilket gör att vi "biter ihop" mer. Det kan resultera i att vi gnisslar eller pressar tänderna. Tänderna ska bara vara i naturlig kontakt med varandra när vi äter och all ytterligare påfrestning gör att våra tänder slits mer. Det påverkar både tandemalj och tidigare gjorda konstruktioner, som kan få en kortare livslängd. I många fall leder den överarbetade tugg- och bitmuskulaturen dessutom till återkommande huvudvärk. </p>
+
+<p>Tanken med en bettskena är att du ska få den i tid, innan du hunnit gnissla ner tänderna för mycket. Det sker oftast inte mycket från år till år, men risken är att man efter 10 års gnisslande har tänder som har en annorlunda form och ser kortare ut. Att man sedan gnisslat bort emalj gör att den inre ytan av tanden, dentinet, ibland blottas. Påföljden är att nerven i tanden reagerar mot kallt och varmt. </p>
+
+<p>Vid en undersökning kan vi ofta uppmärksamma om du har slitage eller nötningar på tandens emalj och då är vår rekommendation att skaffa en bettskena. En effektiv och enkel lösning. Bettskenan används framförallt nattetid och sitter vanligtvis på tänderna i överkäken. Det är en individuellt anpassad bettskena som avlastar underkäkens pressande och gnisslande mot överkäken och helt enkelt "tvingar" underkäken och dess muskulatur att slappna av. Bettskenan skall alltid vara hård och täcka samtliga tänder, vilket inte alla bettskenor som man köper "ute på stan" gör. </p>
+
 			</div>
 			<div class="col-md-6">
 				<img src="img/dentist.png" class="pull-right img-responsive" />
