--- a/partials/directives/contactform-vertical.html
+++ b/partials/directives/contactform-vertical.html
@@ -14,7 +14,7 @@
 
 	<div class="form-group">
 		<select ng-model="user.mottagning" name="klinik" class="form-control">
-			<option value="" selected default>Klinik</option>
+			<option value="" selected default>Välj klinik</option>
 			<option>Olskroken</option>
 			<option>Redbergsplatsen</option>
 		</select>
