--- a/partials/footer.html
+++ b/partials/footer.html
@@ -20,12 +20,19 @@
 		<div class="col-md-2">
 			<h4>Behandlingar</h4>
 			<ul>
-				<li><a href="">Allmän tandvård</a></li>
-				<li><a href="">Förebyggande tandvård</a></li>
-				<li><a href="">Tandblekning</a></li>
-				<li><a href="">Estetik</a></li>
+				<li><a href="behandlingar/allman-tandvard">Allmän tandvård</a></li>
+				<li><a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Förebyggande tandvård</a></li>
+				<li><a href="behandlingar/tandblekning">Tandblekning</a></li>
+
 				<li><a href="behandlingar/bettskena">Bettskena</a></li>
-				<li><a href="">Visdomstandskirurgi</a></li>
+				<li><a href="behandlingar/visdomtandskirurgi">Visdomstandskirurgi</a></li>
+				<li><a href="behandlingar/tandimplantat">Tandimplantat</a></li>
+
+				<li><a href="behandlingar/tandreglering">Tandreglering</a></li>
+				<li><a href="behandlingar/estetisk-tandvard">Estetisk Tandvård</a></li>
+				<li><a href="behandlingar/tandvardsradsla">Tandvårdsrädsla</a></li>
+				
+				
 			</ul>
 		</div>
 
