--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -13,7 +13,7 @@
             				<span class="icon-bar"></span>
             			</button>
 
-            			<a class="navbar-brand" href="#/">
+            			<a class="navbar-brand" href="/">
                             <img src="img/logo.png" height="40px" />
                         </a>
             		</div>
@@ -22,27 +22,27 @@
                     <div class="collapse navbar-collapse" id="collapsing-menu">
                         <ul class="nav navbar-nav navbar-right">
                         <li ng-class="{ active: (isActive('/akut'))}">
-                        	<a href="#akut">Akut</a>
+                        	<a href="akut">Akut</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/behandlingar'))}">
-                        	<a href="#behandlingar">Behandlingar</a>
+                        	<a href="behandlingar">Behandlingar</a>
                         </li>
 
-                        <li ng-class="{ active: (isActive('/behandlingar/bettskena'))}">
-                        	<a href="#behandlingar/bettskena">Bettskena</a>
+                        <li ng-class="{ active: (isActive('/behandlingar/tandreglering/'))}">
+                        	<a href="behandlingar/tandreglering/">Tandreglering</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/vardgivare'))}">
-                        	<a href="#vardgivare">Vårdgivare</a>
+                        	<a href="vardgivare">För Vårdgivare</a>
                         </li>
 
-                        <li ng-class="{ active: (isActive('/priser'))}">
-                        	<a href="#priser">Priser</a>
+                         <li ng-class="{ active: (isActive('/priser'))}">
+                            <a href="priser">Priser</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/om'))}">
-                        	<a href="#om">Om oss</a>
+                        	<a href="om">Om Oss</a>
                         </li>
                         </ul>
 
