--- a/partials/start.html
+++ b/partials/start.html
@@ -19,7 +19,7 @@
 		<div class="jumbotron text-center">
 			<h1>Letar du tandläkare i Göteborg?</h1>
 			<p>
-				Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+				Beiring tandklinik vill skapa långsiktiga patientrelationer genom att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat här hos oss – akuttandläkare, specialister och tandtekniker.
 			</p>
 
 			<p>
@@ -62,7 +62,7 @@
 			<div class="col-md-4 text-center">
 				<img class="img-responsive center-block" src="img/chair.png" />
 
-				<h3>Göteborgs bästa tandläkare</h3>
+				<h3>Erfarna tandläkare och specialistkompetenser</h3>
 
 				<p>
 					<button class="btn btn-round btn-yellow">Läs mer om oss</button>
@@ -72,7 +72,7 @@
 			<div class="col-md-4 text-center">
 				<img class="img-responsive center-block" src="img/tooth.png" />
 
-				<h3>Vi har Göteborgs tandregleringsexperter</h3>
+				<h3>Expertkunskaper inom tandreglering</h3>
 
 				<p>
 					<button class="btn btn-round btn-white">Läs mer om tandreglering</button>
@@ -82,7 +82,7 @@
 			<div class="col-md-4 text-center">
 				<img class="img-responsive center-block" src="img/pig.png" />
 
-				<h3>Bra priser och finansieringsmöjligheter</h3>
+				<h3>Bra priser och finansieringslösningar</h3>
 
 				<p>
 					<button class="btn btn-round btn-white">Läs mer om finansiering</button>
