--- a/partials/vardgivare.html
+++ b/partials/vardgivare.html
@@ -1,5 +1,17 @@
 <section class="light container-fluid">
 	<div class="narrow">
-		<h3>Vårdgivare</h3>
+		<div class="row">
+			<div class="col-md-6">
+				<h3>Nu kan du remittera patienter för ortodonti till vår specialist Johan Wetterqvist. </h3>
+
+				<p>Om en till oss remitterad patient mot förmodan frågar om hon/han får fortsätta hos oss avvisar vi detta vänligt men bestämt och hänvisar tillbaka till remitterande tandläkare.</br></br>
+
+				Mejla oss på info@beiringtandklinik.se med namn och kontaktuppgifter.</p>
+			</div>
+				
+			<div class="col-md-6">
+				<img src="img/johanwetterqvist.png" class="pull-right img-responsive" />
+			</div>
+		</div>
 	</div>
 </section>
