--- a/partials/behandlingar.html
+++ b/partials/behandlingar.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-6">
 		</div>
-		<div class="col-md-6 opaque">
+		<div class="col-md-6 opaque menu-padding">
 			<h2>Vi utför all form av tandvård i Göteborg</h2>
 			<p>Vi på Beiring Tandklinik utför all form av tandvård. Våra två kliniker hittar du i Olskroken, Redbergsvägen 13 A ovanpå ”le Pain Francais” och vid Kopparmärra, Östra Hamngatan 52 ovanpå Akademibokhandeln.</p>
 		</div>
@@ -54,7 +54,9 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="tile">
-					<a href="behandlingar/bettskena"><h3>Bettskena</h3></a>
+					<h3>
+						<a href="behandlingar/bettskena">Bettskena</a>
+					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
 						Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna. <a href="behandlingar/bettskena">Läs mer om Bettskena.</a>
@@ -89,7 +91,9 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="tile">
-					<a href="behandlingar/tandreglering"><h3>Tandreglering</h3></a>
+					<h3>
+						<a href="behandlingar/tandreglering">Tandreglering</a>
+					</h3>
 					<div class="box">&nbsp;</div>
 					<p class="caption">
 						Hos oss kan du få hjälp med allt från enkla justeringar till omfattande felställningar. <a href="behandlingar/tandreglering"> Läs mer om tandreglering.</a>
