--- a/partials/footer.html
+++ b/partials/footer.html
@@ -36,19 +36,19 @@
 			</ul>
 		</div>
 
-		<div class="col-md-2">
+		<div class="col-md-3">
 			<h4>Kontakt</h4>
 
 			<address>
 				Östra Hamngatan 52<br />
 				411 09 Göteborg<br />
-				<a href="mailto:info@beiringtandklinik.se">info<br />@beiringtandklinik.se</a>
+				<a href="mailto:info@beiringtandklinik.se">info@beiringtandklinik.se</a>
 			</address>
 
 			<address>
 				Redbergsvägen 13A<br />
 				416 65 Göteborg<br />
-				<a href="mailto:olskroken@beiringtandklinik.se">olskroken<br />@beiringtandklinik.se</a>
+				<a href="mailto:olskroken@beiringtandklinik.se">olskroken@beiringtandklinik.se</a>
 			</address>
 
 		</div>
@@ -59,7 +59,7 @@
 			<div class="fb-like" data-href="https://www.facebook.com/beiringtandklinik" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
 		</div>
 
-		<div class="col-md-2"></div>
+		<div class="col-md-1"></div>
 
 	</div>
 </div>
