--- a/partials/directives/call-me-form.html
+++ b/partials/directives/call-me-form.html
@@ -1,10 +1,10 @@
+<h4>Fyll i dina uppgifter så ringer vi snart upp dig</h4>
+
 <h3 ng-show="success" class="text-center">
 	Tack, vi ringer dig!
 </h3>
 
-<h4>Fyll i dina uppgifter så ringer vi snart upp dig</h4>
-
-<form class="row">
+<form ng-hide="success" class="row" name="form">
 	<div class="col-md-4">
 		<div class="form-group">
 			<input type="text" class="form-control" ng-model="user.namn" placeholder="Namn" name="namn" />
@@ -19,7 +19,7 @@
 
 	<div class="col-md-4">
 		<div class="form-group">
-			<button type="submit" ng-click="submit(user)" class="btn btn-yellow form-control">Ring mig</button>
+			<button type="submit" ng-click="submit(user)" class="btn btn-yellow form-control" ng-disabled="form.telefon.$pristine || form.telefon.$dirty && form.telefon.$invalid">Ring mig</button>
 		</div>
 	<div>
 </form>
