--- a/partials/directives/contactform-horizontal.html
+++ b/partials/directives/contactform-horizontal.html
@@ -2,7 +2,7 @@
 	Tack, vi återkommer!
 </h3>
 
-<form class="row">
+<form ng-hide="success" class="row">
 	<div class="col-md-4">
 		<h3>Ring <span class="btn btn-round btn-white"><a href="tel:031138304">031-138304</a></span> för tidsbokning, eller maila oss direkt.</h3>
 	</div>
