--- a/partials/about.html
+++ b/partials/about.html
@@ -35,6 +35,191 @@
 	</div>
 </section>
 
+<section class="light container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<img src="img/tandlakarstol_01.png" class="img-responsive chair-1" />
+		</div>
+
+		<div class="col-md-6">
+			<div class="jumbotron">
+				<h2 class="dark-text">Vår filosofi</h2>
+				<p>
+					Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+<section class="light container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="jumbotron">
+				<h2 class="dark-text">Vår filosofi</h2>
+				<p>
+					Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+				</p>
+			</div>
+		</div>
+
+		<div class="col-md-6">
+			<img src="img/tandlakarstol_02.png" class="img-responsive chair-2" />
+		</div>
+	</div>
+</section>
+
+
+
+
+<section class="white container-fluid">
+	<div class="narrow">
+		<div class="jumbotron text-center">
+			<h3 class="dark-text">Vi är Beiring Tandklinik</h3>
+		</div>
+
+		<div class="row">
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="person text-center">
+					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+
+					<h4>Martin Beiring</h4>
+					<p>
+						Tandläkare
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
 
 <section class="light container-fluid">
 	<div class="narrow">
